--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 	HEADER 1 
 
 </h1>
+<img src="http://t3.gstatic.com/images?q=tbn:ANd9GcSFKuUpGAEGRhzhLhVIP9x5mofmLLN5lQVZVeIIP283RZelIRXl" alt="Mountain View" style="width:304px;height:228px">
+
 <h2 class="header"> HEADER 2 </h2>
 <h3 class="header"> HEADER 3 </h3>
 
@@ -19,6 +21,7 @@
 </style>
 
 <script>
+
 var count=0;
 var sh = document.getElementById("super_header");
 
